Ensure visibility of focus-ring in Firefox

--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -50,8 +50,10 @@ a {
   }
 }
 
-*:focus {
+*:focus-visible {
   outline-color: #757575;
+  outline:5px solid #757575; 
+  outline-offset: 2px;  
 }
 
 *::selection {
